--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,11 +28,11 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.PlaylistMaker"
         tools:targetApi="31">
-        <activity android:name=".SearchActivity" />
-        <activity android:name=".MediaActivity" />
-        <activity android:name=".SettingsActivity" />
+        <activity android:name=".ui.SearchActivity" />
+        <activity android:name=".ui.MediaActivity" />
+        <activity android:name=".ui.SettingsActivity" />
         <activity
-            android:name=".MainActivity"
+            android:name=".ui.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
